Fixed input field layout on small screens.

--- a/fediverse-share-button/src/styles/styles.scss
+++ b/fediverse-share-button/src/styles/styles.scss
@@ -29,7 +29,7 @@
   box-sizing: border-box;
   position: relative;
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   align-items: stretch;
   width: 100%;
   margin-bottom: 1rem !important;
